# 3d-graphics

./: .gitignore  Cargo.toml  README.md  report.md
assets/cacodemon/: cacodemon.mtl
assets/cat/: cat.mtl
cpp/: .clang-format  .gitignore
cpp/include/core/: intersectable_object.h  intersection.h
raytracing/: .gitignore  CMakeLists.txt  main.cpp
raytracing/include/core/: intersectable_object.h  intersection.h  intersection_builder.h  light_source.h  object.h  ray.h  scene.h  sphere.h  sphere_builder.h
raytracing/include/utils/: constants.h  random.h  vector3.h
raytracing/include/view/: camera.h  image.h
raytracing/src/core/: intersection.cpp  intersection_builder.cpp  light_source.cpp  ray.cpp  scene.cpp  sphere.cpp  sphere_builder.cpp
raytracing/src/utils/: random.cpp  vector3.cpp
raytracing/src/view/: camera.cpp  image.cpp
rust/src/: main.rs
rust/src/core/: bounding_box.rs  bvh.rs  intersection.rs  mesh.rs  mesh_object.rs  mod.rs  object.rs  point_light_source.rs  ray.rs  scene.rs  sphere.rs  texture.rs
rust/src/utils/: constants.rs  matrix.rs  mesh.rs  mod.rs  random.rs  vector3.rs
rust/src/view/: camera.rs  image.rs
src/: main.rs
src/core/: bvh.rs  intersectable.rs  intersection.rs  light_source.rs  mesh.rs  mesh_object.rs  mod.rs  point_light_source.rs  ray.rs  scene.rs  sphere.rs  texture.rs
src/utils/: constants.rs  matrix.rs  mod.rs  random.rs  vector3.rs
src/view/: camera.rs  image.rs  mod.rs
